# Hot-Entities-Plus-Plus

./: CMakeLists.txt  README.md
hot_entities/: EntityManager.hpp  IEntity.hpp
